# sound2osc

./: .gitignore  .gitmodules  .releaserc.json  AGENTS.md  BUILD_DEBIAN.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MODERNIZATION_PLAN.md  README.md
.github/workflows/: build.yml  ci.yml  release.yml
apps/: CMakeLists.txt
apps/gui/: CMakeLists.txt  main.cpp
apps/gui/qml/: main.qml
apps/gui/qml/components/: BPMOscMessagesCobaltArea.qml  BPMOscMessagesCobaltOldArea.qml  BPMOscMessagesEosArea.qml  BPMOscMessagesOtherArea.qml  NumericInput.qml  OscMessagesCobaltArea.qml  OscMessagesCobaltOldArea.qml  OscMessagesColorSourceArea.qml  OscMessagesEosArea.qml  OscMessagesHog4Area.qml  TouchArea.qml
apps/gui/qml/dialogs/: AboutDialog.qml  BPMOscMessageDialog.qml  NoInputDeviceDialog.qml  OscLogDialog.qml  OscMessageDialog.qml  PresetListDialog.qml  PresetsDialog.qml  SettingsDialog.qml
apps/gui/qml/style/: CenterLabel.qml  DarkBlueStripedBackground.qml  DarkButton.qml  DarkCheckBox.qml  DarkComboBox.qml  DarkRadioButton.qml  DarkSpinBox.qml  DarkSplitView.qml  DarkTabView.qml  DarkTextField.qml  GreyText.qml  NumBlockButton.qml  SliderWithIndicator.qml
apps/gui/qml/views/: BPMSettings.qml  BandpassPreviewInSpectrum.qml  SpectrumPlot.qml  SpectrumWithControls.qml  TriggerSettings.qml  TriggerSettingsArea.qml  TriggerSettingsLegend.qml  WavePlot.qml
apps/gui/resources/: images.qrc  qml.qrc
apps/gui/src/controllers/: MainController.cpp  MainController.h  TriggerGuiController.cpp  TriggerGuiController.h
apps/gui/src/osc/: OSCMapping.cpp  OSCMapping.h
apps/gui/src/utils/: SettingsMigration.cpp  SettingsMigration.h
apps/headless/: CMakeLists.txt  main.cpp
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  Platform.cmake
docs/: BUILD.md  BUILD_DEBIAN.md  CHANGELOG.md  CONFIG_REFERENCE.md  MODERNIZATION_PLAN.md  OSC_REFERENCE.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/building/: LINUX.md  MACOS.md  WINDOWS.md
libs/: CMakeLists.txt
libs/sound2osc-core/: CMakeLists.txt
libs/sound2osc-core/include/sound2osc/audio/: AudioInputInterface.h  MiniaudioInputWrapper.h  MonoAudioBuffer.h  QAudioInputWrapper.h
libs/sound2osc-core/include/sound2osc/bpm/: BPMDetector.h  BPMOscControler.h  BPMTapDetector.h
libs/sound2osc-core/include/sound2osc/config/: ConfigStore.h  JsonConfigStore.h  PresetManager.h  SettingsManager.h
libs/sound2osc-core/include/sound2osc/core/: AppInfo.h  QCircularBuffer.h  Sound2OscEngine.h  utils.h  versionInfo.h
libs/sound2osc-core/include/sound2osc/dsp/: BasicFFTInterface.h  FFTAnalyzer.h  FFTRealWrapper.h  ScaledSpectrum.h
libs/sound2osc-core/include/sound2osc/logging/: Logger.h
libs/sound2osc-core/include/sound2osc/osc/: OSCMessage.h  OSCNetworkManager.h  OSCParser.h
libs/sound2osc-core/include/sound2osc/trigger/: TriggerFilter.h  TriggerGenerator.h  TriggerGeneratorInterface.h  TriggerOscParameters.h
libs/sound2osc-core/src/audio/: MiniaudioInputWrapper.cpp  MonoAudioBuffer.cpp  QAudioInputWrapper.cpp
libs/sound2osc-core/src/bpm/: BPMDetector.cpp  BPMOscControler.cpp  BPMTapDetector.cpp
libs/sound2osc-core/src/config/: JsonConfigStore.cpp  PresetManager.cpp  SettingsManager.cpp
libs/sound2osc-core/src/core/: AppInfo.cpp  Sound2OscEngine.cpp
libs/sound2osc-core/src/dsp/: FFTAnalyzer.cpp  ScaledSpectrum.cpp
libs/sound2osc-core/src/logging/: Logger.cpp
libs/sound2osc-core/src/osc/: OSCMessage.cpp  OSCNetworkManager.cpp  OSCParser.cpp
libs/sound2osc-core/src/trigger/: TriggerFilter.cpp  TriggerGenerator.cpp  TriggerOscParameters.cpp
tests/: CMakeLists.txt
tests/integration/: TestPipeline.cpp
tests/unit/: TestAppInfo.cpp  TestBPM.cpp  TestConfigStore.cpp  TestDSP.cpp  TestLogger.cpp  TestOSCMessage.cpp  TestTrigger.cpp
